[project]
name = "pystructs"
version = "0.3.0"
description = "c-like struct implementation for human"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "moreal", email = "dev.moreal@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/moreal/pystructs"
Repository = "https://github.com/moreal/pystructs"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "codecov",
    "black",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
