[project]
name = "pystructs"
version = "0.4.0"
description = "c-like struct implementation for human"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    {name = "moreal", email = "dev.moreal@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/moreal/pystructs"
Repository = "https://github.com/moreal/pystructs"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "codecov",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
